syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "reporting";

package com.goodfood.reporting;

message Metric {
  string id = 1;
  string key = 2;
  string restaurant_id = 3;
  google.protobuf.Timestamp date = 4;
  string code = 5;
  string value = 6;
}

service ReportingService {
  rpc GetMetric (GetMetricRequest) returns (Metric) {}
  rpc GetMetricsByRestaurant(GetMetricsByRestaurantRequest) returns (GetMetricsByRestaurantResponse) {}
  rpc GetMetricsByRestaurantAndDate (GetMetricsByRestaurantAndDateRequest) returns (GetMetricsByRestaurantAndDateResponse) {}

  rpc PushMetric (PushMetricRequest) returns (PushMetricResponse) {}
}

message GetMetricRequest {
  string key = 1;
}

message GetMetricsByRestaurantRequest {
  string restaurant_id = 1;
}

message GetMetricsByRestaurantResponse {
  repeated Metric metrics = 1;
}

message GetMetricsByRestaurantAndDateRequest {
  string restaurant_id = 1;
  string date = 2;
}

message GetMetricsByRestaurantAndDateResponse {
  repeated Metric metrics = 1;
}

message PushMetricRequest {
  string restaurant_id = 1;
  string code = 2;
  string value = 3;
}

message PushMetricResponse {
  string key = 1;
}
